prevent overflow

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,6 +2,10 @@ body {
   background-color: #191919;
 }
 
+.container-fluid {
+  overflow: hidden;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
